[build-system]
requires = ["uv_build >= 0.9.5, <0.10.0"]
build-backend = "uv_build"

[project]
name = "void-engine"
version = "0.1.0"
description = "Welcome to the future! We present you the most advance voice engine to use your computer!"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "pillow>=12.0.0",
    "pyautogui>=0.9.54",
    "pysimplegui>=5.0.8.3",
    "simpleaudio>=1.0.4",
    "textual>=6.4.0",
]

[project.scripts]
void-engine = "void_engine.__main__:main"

[dependency-groups]
dev = [
    "ruff>=0.14.2",
    "textual-dev>=1.8.0",
]
